Fix back arrow alignment

--- a/src/sentry/static/sentry/less/layout.less
+++ b/src/sentry/static/sentry/less/layout.less
@@ -23,9 +23,10 @@ body {
 body.narrow {
   background: #fff;
 
-  .app > .container {
-    max-width: 760px;
-    padding-top: 40px;
+  .app {
+    > .container {
+      max-width: 760px;
+    }
   }
 }
 
